--- a/src/scss/datetime.scss
+++ b/src/scss/datetime.scss
@@ -10,6 +10,7 @@
   outline: 0;
   cursor: pointer;
   line-height: 1;
+  width: 50%;
 
   &:before {
     margin-right: 6px;
@@ -98,14 +99,22 @@
   }
 
   .dt-close {
-    display: block;
     margin-top: 10px;
-    width: 100%;
     background-color: $blue;
     padding: 12px 0;
     text-align: center;
     color: $white;
     font-size: 16px;
     border-radius: 3px;
+  }
+
+  .dt-clear {
+    color: $black;
+    text-decoration: underline;
+    text-align: right;
+    padding-right: 20px;
+    display: inline-block;
+    width: 50%;
+    cursor: pointer;
   }
 }
