--- a/src/scss/calendar.scss
+++ b/src/scss/calendar.scss
@@ -1,100 +1,94 @@
 @import 'variables';
 
-.dt-calendar {
-  display: inline-block;
+.dt-dialog {
+  border: 1px solid $gray-dark;
+}
 
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    border-spacing: 0;
-    table-layout: fixed;
+// toolbar above the calendar
+.dt-toolbar {
+  line-height: 30px;
+  color: $blue;
+  text-align: center;
+  margin-bottom: 13px;
+  display: flex;
+
+}
+
+// current month in the toolbar
+.dt-current-date {
+  flex-grow: 1;
+  color: $blue;
+}
+
+// buttons for next/last month
+.dt-button {
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  color: #ffffff;
+  border: 1px solid $blue;
+  border-radius: 50%;
+  background: $blue;
+  opacity: .8;
+  &:before {
+    margin: 0 2px;
+    font-size: 32px;
+    line-height: 23px;
   }
-
-  td {
-    padding: 8px 0;
-    text-align: center;
-    cursor: pointer;
-    color: $gray;
-    border: 1px solid $gray;
-  }
-
-  thead {
-    td {
-      color: $blue;
-      font-size: 11px;
-      font-weight: 700;
-      text-transform: uppercase;
-      font-size: 12px;
-    }
-  }
-
-  tbody td {
-    color: $black;
-
-    &:hover {
-      background: $blue-light;
-      border-color: $blue;
-      color: $white;
-    }
-  }
-
-  .dt-current-day {
-    background-color: $blue !important;
-    font-weight: bold;
-    color: white !important;
-  }
-
-  .dt-prev-month,
-  .dt-next-month,
-  .dt-invalid {
-    color: $gray-light;
-  }
-
-  .dt-toolbar {
-    line-height: 30px;
-    color: $blue;
-    text-align: center;
-    margin-bottom: 13px;
-
-    button {
-      position: relative;
-      width: 30px;
-      height: 30px;
-      line-height: 30px;
-      color: #ffffff;
-      border: 1px solid $blue;
-      border-radius: 50%;
-      background: $blue;
-      font-size: 20px;
-      padding: 0;
-      text-align: center;
-      outline: 0;
-      z-index: 5;
-      cursor: pointer;
-    }
-
-    .dt-prev-month {
-      float: left;
-      &:before {
-        content: "\02039";
-        font-size: 42px;
-        line-height: 23px;
-        margin-right: 2px;
-      }
-    }
-
-    .dt-next-month {
-      float: right;
-      &:before {
-        content: "\0203A";
-        font-size: 42px;
-        line-height: 23px;
-        margin-left: 2px;
-      }
-    }
-
-    .dt-current-date {
-      color: $blue;
-    }
+  &:hover, &:focus {
+    opacity: 1;
   }
 }
+
+.dt-btn-prev-month:before {
+  content: "\02039";
+}
+
+.dt-btn-next-month:before {
+  content: "\0203A";
+}
+
+
+
+.dt-calendar-table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  table-layout: fixed;
+}
+
+.dt-day,
+.dt-th {
+  padding: 8px 0;
+  text-align: center;
+  cursor: pointer;
+  color: $black;
+  border: 1px solid $gray;
+}
+
+.dt-th {
+  color: $blue;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+
+.dt-day:hover {
+  background: $blue-light;
+  border-color: $blue;
+  color: $white;
+}
+
+
+.dt-current-day {
+  background-color: $blue !important;
+  font-weight: bold;
+  color: white !important;
+}
+
+.dt-prev-month,
+.dt-next-month,
+.dt-invalid {
+  color: $gray-light;
+}
+
