--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,7 +2,7 @@
 $blue: #1385e5;
 $blue-light: #67a6dc;
 $gray: #dfe0e4;
-$gray-dark: #636262;
+$gray-dark: #bcbcbc;
 $white: #ffffff;
 $black: #222;
 $gray-light: #999;
