--- a/src/scss/calendar.scss
+++ b/src/scss/calendar.scss
@@ -3,10 +3,16 @@
 .dt-dialog {
   border: 1px solid $gray-dark;
   margin: .5rem 0;
-  z-index: 2;
+  z-index: 3;
+  box-shadow: 0 0 1rem rgba(0,0,0,.1);
 }
-.dt-dialog::backdrop {
-  background: rgba(0, 0, 0,.8);
+.dt-dialog-backdrop {
+  z-index: 1;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
 }
 
 // toolbar above the calendar
