--- a/src/scss/calendar.scss
+++ b/src/scss/calendar.scss
@@ -1,10 +1,10 @@
-@import 'variables';
+@import "variables";
 
 .dt-dialog {
   border: 1px solid $gray-dark;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
   z-index: 3;
-  box-shadow: 0 0 1rem rgba(0,0,0,.1);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
   display: block;
   position: absolute;
   left: 0px;
@@ -28,7 +28,6 @@
   text-align: center;
   margin-bottom: 13px;
   display: flex;
-
 }
 
 // current month in the toolbar
@@ -53,8 +52,9 @@
     font-size: 32px;
     line-height: 23px;
   }
-  
-  &:hover, &:focus {
+
+  &:hover,
+  &:focus {
     color: #ffffff;
     background: $blue;
   }
@@ -68,15 +68,13 @@
   content: "\0203A";
 }
 
-
-
 .dt-calendar-table {
   border-collapse: collapse;
   border-spacing: 0;
   table-layout: fixed;
 }
 
-.dt-day-a, 
+.dt-day-a,
 .dt-th {
   text-align: center;
   cursor: pointer;
@@ -85,7 +83,7 @@
 
 .dt-th {
   border: 1px solid $gray;
-  padding: .5rem;
+  padding: 0.5rem;
   width: 2.8rem;
   color: $blue;
   font-weight: 700;
@@ -97,7 +95,7 @@
   padding: 0;
 }
 .dt-day-a {
-  padding: .5rem;
+  padding: 0.5rem;
   width: 2.8rem;
   display: block;
   text-decoration: none;
@@ -120,4 +118,3 @@
 .dt-invalid {
   color: $gray-light;
 }
-
