Remove moment and move from mocha into jest

--- a/src/scss/calendar.scss
+++ b/src/scss/calendar.scss
@@ -77,8 +77,11 @@
 .dt-day-a,
 .dt-th {
   text-align: center;
-  cursor: pointer;
   color: $black;
+}
+
+.dt-day-a {
+  cursor: pointer;
 }
 
 .dt-th {
